--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
+*::-webkit-scrollbar {
+  width: 5px;
+  background-color: white;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 14px;
+  border: 3px solid lightgray;
+}
 @tailwind components;
 @tailwind utilities;
